[package]
edition = "2021"
name = "solipsist-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
ntp = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.91"
